package iutnc.s3c.sae_app_javafx;

public class Person {
}
